# opengl_cube

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: shader.frag  shader.vsh
src/: GeometricObjects.cpp  GeometricObjects.h  InitWindow.cpp  InitWindow.h  SceneLogic.cpp  SceneLogic.h  SceneObject.cpp  SceneObject.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexObjects.cpp  VertexObjects.h  main.cpp
